--- a/Alzheimer's_Classification.ipynb
+++ b/Alzheimer's_Classification.ipynb
@@ -31,11 +31,10 @@
       "cell_type": "markdown",
       "source": [
         "# Models\n",
-        "- [Inception v3](https://www.kaggle.com/code/shivamsingh96/alzheimer-s-disease-prediction-using-inception-v3)\n",
-        "- [VGG](https://www.kaggle.com/code/shunmathiii/alzheimer-vgg19-2)\n",
-        "- [SVM](https://www.kaggle.com/code/shunmathiii/alzheimer-disease-detection-svm)\n",
-        "- [Custom CNN](https://www.kaggle.com/code/jeongwoopark/alzheimer-detection-and-classification-98-7-acc)\n",
-        "-[Link](https://www.analyticsvidhya.com/blog/2020/08/top-4-pre-trained-models-for-image-classification-with-python-code/)\n"
+        "- Inception v3\n",
+        "- VGG\n",
+        "- SVM\n",
+        "- Custom CNN\n"
       ],
       "metadata": {
         "id": "FW_mxZwnnpY1"
